--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,39 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
+html,
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+    height: 100%;
+    margin: 0;
+    padding: 0;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+/* Definimos los colores como variables en :root */
+:root {
+    /* Neutrales */
+    --neutral-0: hsl(200, 60%, 99%);
+    --neutral-100: hsl(0, 0%, 93%);
+    --neutral-200: hsl(217, 61%, 90%);
+    --neutral-300: hsl(0, 0%, 78%);
+    --neutral-600: hsl(226, 11%, 37%);
+    --neutral-700: hsl(225, 23%, 24%);
+    --neutral-800: hsl(226, 25%, 17%);
+    --neutral-900: hsl(227, 75%, 14%);
+
+    /* Rojos */
+    --red-400: hsl(3, 86%, 64%);
+    --red-500: hsl(3, 71%, 56%);
+    --red-700: hsl(3, 77%, 44%);
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
+/* Gradientes */
+@layer utilities {
+    .light-gradient {
+        background: linear-gradient(180deg, #EBF2FC 0%, #EEF8F9 100%);
+    }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+    .dark-gradient {
+        background: linear-gradient(180deg, #040918 0%, #091540 100%);
+    }
 }
